# J1

./: .dockerignore  .env.example  .gitignore  ASSESSMENT_PLAN_BOUNDARY_AUDIT.md  CLAUDE.md  CONFIG_AUDIT.md  CONFIG_AUDIT_V2.md  CONTRIBUTING.md  README.md  pyproject.toml
deploy/dev/: Dockerfile  README.md  _wiring.py  api.py  docker-compose.yml  env-runtime-config.example.md  worker.py
deploy/dev/postgres-init/: 01-create-databases.sh
dev_fixtures/memory_eval/sample/: README.md  memory_query_eval.yaml  sample_info.json
docs/: 01-overall-architecture.md  02-ingestion-flow.md  03-query-flow.md  04-core-data-model.md  05-developer-onboarding.md  06-risks-and-known-limitations.md  07-deployment-and-scaling.md  08-multi-kb-model.md  09-external-integration-model.md  10-domain-configuration.md  11-ingestion-execution-profiles.md  12-retrieval-intelligence-roadmap.md  DOMAIN_PACKS.md  INGESTION_PROFILES.md  README.md  architecture.md  bulk.md  event-integration.md  external-integration-architecture.md  ingestion-flow.md  ingestion-operations.md  ingestion-progress.md  ingestion-stability-audit.md  ingestion-stage-validation.md  ingestion-tracing.md  integration-guide.md  j1-minimal-queryable-ingestion-settings-prompt.md  j1_snapshot_centric_ux_refactor_prompt.md  mcp-status.md  providers.md  rest-api.md  security.md  settings.md  tech-debt.md  troubleshooting.md  unified-memory-contract.md  webhooks.md
docs/architecture/: domain-profiles.md  enrichment-overlay.md  final-ingestion-report.md  ingestion-pipeline.md
docs/asyncapi/: kb-events.asyncapi.yaml
docs/configuration/: environment.md
docs/development/: onboarding.md
docs/extension/: add-a-provider.md  conformance-tests.md  contracts.md  domain-module-isolation.md  manifest-and-registry.md  overview.md
docs/guides/: adding-a-domain-profile.md  adding-an-enrichment-module.md
docs/migration/: deprecated-docs.md
docs/operations/: production-worker-wiring.md  temporal.md
docs/reference/: artifacts.md  ui-copy.md
evaluation/retrieval_broadening/: README.md  sample_queries.json
frontend/: .dockerignore  .eslintrc.cjs  .gitignore  .prettierrc.json  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend.prototype/: README.md  all-runs.jsx  api-client.jsx  app.jsx  icons.jsx  index.html  mock-api.jsx  run-detail.jsx  styles.css  ui.jsx  upload.jsx
frontend/e2e/: execution-console.spec.ts  results-section.spec.ts
frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
frontend/src/__tests__/: pr08-ui-contract.test.ts
frontend/src/components/: AuthModal.tsx  Banner.tsx  ContextBar.tsx  JsonView.tsx  LLMHealthBanner.tsx  MainNav.tsx  Modal.tsx  Toast.tsx  Typewriter.tsx  badges.tsx  icons.tsx
frontend/src/lib/: client-context.tsx  display.ts  format.ts  processing-steps.ts  runState.ts
frontend/src/pages/: AllRunsPage.tsx  DocumentDetailPage.tsx  DocumentsPage.tsx  RunDetailPage.tsx  UploadPage.tsx
frontend/src/types/: documents.ts  execution-profile.ts  ingestion.ts  review.ts  ui.ts
scripts/: demo_diagnostic_report.py  repair_graph_json_orphans.py  reset_dev_knowledge.py
scripts/dev/: reset_docker.sh
src/j1/: __init__.py  _serialization.py  _validators.py  checksum.py  enrichers.py  heartbeat.py  locks.py  testing.py
src/j1/api/: __init__.py  app.py  schemas.py  services.py
src/j1/artifacts/: __init__.py  manifest.py  models.py  registry.py
src/j1/audit/: __init__.py  events.py  recorder.py  sink.py
src/j1/compose/: __init__.py  bootstrap.py  diagnostics.py
src/j1/config/: __init__.py  runtime.py  settings.py
src/j1/cost/: __init__.py  aggregator.py  breakdown.py  budget.py  estimator.py  events.py  recorder.py  router.py  sink.py
src/j1/documents/: __init__.py  artifact_state.py  backfill.py  cleanup.py  index_refs.py  lifecycle.py  models.py  projector.py  service.py  snapshot.py  snapshot_artifact.py  snapshot_cleanup.py  snapshot_layout.py  snapshot_lifecycle.py  snapshot_service.py  snapshot_store.py  versions.py
src/j1/domains/: __init__.py  general.py  models.py  profile_rules.py  registry.py
src/j1/errors/: __init__.py  exceptions.py
src/j1/extension/: __init__.py  conformance.py  contracts.py  manifest.py  mocks.py  primitives.py  registry.py
src/j1/graph/: __init__.py  normalizer.py
src/j1/ingestion_review/: __init__.py  audit_actions.py  availability.py  dtos.py  exceptions.py  service.py
src/j1/intake/: __init__.py  registry.py  (+1 more)
tests/: RETEST_PROTOCOL.md  conftest.py  test_active_scope.py  test_activities_accounting.py  test_activities_knowledge.py  test_activities_lifecycle.py  test_activities_review.py  test_activities_search.py  test_activity_registration_completeness.py  test_advanced_assessment_rest.py  test_alias_producer_trace.py  test_api.py  test_artifact_endpoint_contract.py  test_artifact_manifest.py  test_artifact_registry.py  test_artifact_type_policy.py  test_assessment_decision_lifecycle.py  test_assessment_plan.py  test_assessment_plan_observability.py  test_assessment_plan_precompile_contract.py  test_assessment_plan_wiring.py  test_asyncapi.py  test_audit_recorder.py  test_audit_sink.py  test_audit_snapshot_isolation_fixes.py  test_batch_orchestration_workflow.py  test_batch_run_store.py  test_bm25_auxiliary_only_policy.py  test_bootstrap_integration.py  test_build_graph_run_id_passthrough.py  test_bulk.py  test_capability_recommendations_contract.py  test_citation_preview_enrichment.py  test_classloader.py  test_cleanup_patch.py  test_compare_retrieval_broadening_reports.py  test_compile_only_is_queryable_smoke.py  test_compile_output_dir_layout.py  test_compile_refresh_enrich_reuse.py  test_compile_run_id_passthrough.py  (+299 more)
tests/e2e/: test_dev_stack_smoke.py
tests/extension/: test_conformance_mocks.py  test_contracts.py  test_e2e_mock_workflow.py  test_guards.py  test_manifest.py  test_registry.py
tests/fixtures/: memory_query_eval_sample.yaml
tests/integration/: README.md  test_postgres_fts_live.py  test_rest_search_live.py
(+375 files in other folders)
