[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "j1"
version = "0.0.1"
description = "Reusable knowledge intelligence framework"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7",
    "pyyaml>=6.0",
    "fastapi>=0.100",
    "pydantic>=2.0",
    "python-multipart>=0.0.7",
    # `httpx` is the runtime HTTP client for the OpenAI-compat LLM
    # bridge (`j1.llm.openai_compat`) and webhook delivery
    # (`j1.adapters.webhook.client`). Both lazy-import it; install
    # without it would ImportError on the first LLM/webhook call.
    "httpx>=0.24",
    # `pypdf` is the lightweight PDF inspection library used by
    # `j1.processing.profiling.DeterministicDocumentProfiler` to
    # build `DocumentProfile` signals (page_count, text_extractable_
    # ratio, image_count) for the AssessmentPlan. Pure-Python,
    # side-effect-free, sub-second on typical PDFs — safe to run
    # before the planner has decided whether the document is worth
    # processing. Promoted from a transitive `raganything` dep to
    # core so the profiler works in deployments without RAGAnything
    # (e.g. a lean ingestion-only worker that delegates compile to
    # a remote service). See the profiler's docstring for the
    # lightweight-library policy.
    "pypdf>=4.0",
]

[project.optional-dependencies]
# Test deps. `pytest` for the suite (FastAPI's TestClient is part of
# the FastAPI dependency tree; `httpx` is a core dep).
dev = ["pytest>=8.0"]

# Local-dev ASGI server. Required by `python -m deploy.dev.api`
# (the bundled FastAPI launcher) and by anyone running the dev
# stack via `docker compose -f deploy/dev/docker-compose.yml up`.
# Production deployments wire their own ASGI host (uvicorn /
# hypercorn / gunicorn-uvicorn / etc.) and do not need this extra.
dev-server = ["uvicorn>=0.27"]

# Optional vendor integrations. Install only what you use:
#   pip install j1[raganything]
#   pip install j1[graphify]
#   pip install j1[langchain]
#   pip install j1[langchain-openai]
#   pip install j1[all-providers]
#
# `langchain-*` extras pull a single concrete LangChain vendor package;
# the `langchain` extra is just `langchain-core` (the runtime base).
# Pick whichever vendor packages your deployment actually instantiates.
# Heavy: pulls torch + transformers + mineru + opencv (~700MB).
# MinerU's default parse_method="auto" (hybrid-auto-engine) additionally
# requires the `libxcb1` system library (OpenCV/Qt dep). Install it with:
#   apt-get install -y libxcb1          # Debian/Ubuntu/Docker
#   dnf install -y libxcb               # Fedora/RHEL
# Alternatively, set J1_RAGANYTHING_PARSE_METHOD=vlm-http-client to use
# the remote VLM path, which needs no local torch or libxcb.
raganything = ["raganything"]

# Graphify is published on PyPI as `graphifyy` (double-y). The
# distribution provides BOTH:
#   * a Python module imported as `graphify` (single-y) — used by
#     the bridge in `j1.providers.graphify` when
#     `J1_GRAPHIFY_MODE=python`;
#   * a CLI binary called `graphify` (single-y) — used by the
#     default `J1_GRAPHIFY_MODE=cli` (subprocess) path.
# Other `graphify*` packages on PyPI are unrelated; pin the
# `graphifyy` distribution explicitly.
graphify = ["graphifyy>=0.7"]

langchain = ["langchain-core>=0.2"]
langchain-openai = ["langchain-core>=0.2", "langchain-openai>=0.1"]
langchain-anthropic = ["langchain-core>=0.2", "langchain-anthropic>=0.1"]
langchain-google = ["langchain-core>=0.2", "langchain-google-genai>=1.0"]
langchain-ollama = ["langchain-core>=0.2", "langchain-ollama>=0.1"]

# Postgres FTS evidence index — Phase 3 strategic default. psycopg
# (v3) provides sync + async drivers; the adapter uses the sync API
# from worker activities. The ``[binary]`` extra ships precompiled
# libpq wheels so the worker image doesn't need libpq-dev system
# packages.
postgres = ["psycopg[binary]>=3.1"]
# Pulls every vendor adapter the framework supports out of the box.
# Use this when you want a single image / venv that can switch
# between providers via env config (`J1_DEFAULT_COMPILER`,
# `J1_TEXT_LLM_PROVIDER=langchain`, etc.) at runtime without
# rebuilding. Heavy: raganything alone pulls torch + transformers +
# mineru + opencv (~700MB on disk); its hybrid-auto-engine also
# requires the `libxcb1` system library — set
# J1_RAGANYTHING_PARSE_METHOD=vlm-http-client if you only have VLM
# API access and no local GPU. graphify pulls 20+ tree-sitter
# language grammars. For lean deployments install only the specific
# vendors you actually use.
all-providers = [
    "raganything",
    "graphifyy>=0.7",       # provides the `graphify` import + CLI
    "langchain-core>=0.2",
    "langchain-openai>=0.1",
    "langchain-anthropic>=0.1",
    "langchain-google-genai>=1.0",
    "langchain-ollama>=0.1",
    "psycopg[binary]>=3.1", # Phase 3 Postgres FTS evidence
]

[tool.hatch.build.targets.wheel]
packages = ["src/j1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "e2e: opt-in end-to-end smoke tests that require Docker Compose. Skipped unless J1_E2E=1.",
]
